# mem-abstract-experiments

./: Cargo.toml  README.md
.github/workflows/: cross.yml  workspace.yml
fork-aligners/: README.md
fork-secstr/: README.md
mem-lock-portable/: Cargo.toml  README.md
mem-lock-portable/src/: lib.rs  mlock.rs
mem-lock-portable/src/mlock/: dummy.rs  libc_crate.rs  winapi_crate.rs
mem-protect/: Cargo.toml  README.md  build.rs
mem-protect/src/: dummy_mlock.rs  lib.rs  libc_mlock.rs  winapi_mlock.rs
permissioned-pages/: README.md
secret-key/: Cargo.toml
