[package]
name = "mem-protect"
version = "0.1.0"
edition = "2021"

# TODO: Is there no way to reflect target.cfg().dependencies from build.rs ? :(
# TODO: It would be great to leverage this list for target discovery
#       https://github.com/rust-lang/libc/blob/main/Cargo.toml#L21

# In libc crate we trust .. or not :D
[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", default-features = false, features = ["memoryapi"] }

[build-dependencies]
platforms = "3.1.2"

[features]
default = []
std = []
mlock = []